--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "25.0.3",
     "@types/nodemailer": "^7.0.5",
+    "@types/react": "19.2.8",
     "prisma": "^7.1.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.21.0",
