--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
